ht21 methods added